[gd_scene load_steps=23 format=3 uid="uid://cwhvblny03sya"]

[ext_resource type="Script" uid="uid://d2prf3sknrv5w" path="res://scripts/world/camera_pivot.gd" id="1_1dsme"]
[ext_resource type="Script" uid="uid://dby4rujw2o5ug" path="res://scripts/world/main_game_3d.gd" id="1_bxm63"]
[ext_resource type="Shader" uid="uid://c4kfcb5wrqdql" path="res://main_game_3d.gdshader" id="1_ibdhq"]
[ext_resource type="MeshLibrary" uid="uid://4sk6jlrgilco" path="res://tileset_resources.tres" id="4_ypd6b"]
[ext_resource type="Script" uid="uid://byk6ni3intjxn" path="res://scripts/world/world_generator.gd" id="5_t1nic"]
[ext_resource type="Script" uid="uid://1l5qwpqm725k" path="res://scripts/ui/hud.gd" id="6_dmcra"]
[ext_resource type="Script" uid="uid://duhtij3a37pih" path="res://scripts/managers/construction_manager.gd" id="7_5bore"]
[ext_resource type="PackedScene" uid="uid://j8hgfoyld0e5" path="res://scenes/ui/god_siphon_ui.tscn" id="8_g1lpv"]
[ext_resource type="PackedScene" uid="uid://5d03gyj5ss2q" path="res://scenes/ui/inventory_hud.tscn" id="9_g1lpv"]
[ext_resource type="PackedScene" uid="uid://bnpx62uoxlkf" path="res://scenes/ui/constructor_ui.tscn" id="10_3vmts"]
[ext_resource type="Script" uid="uid://bw55cm0gkk1i2" path="res://scripts/ui/system_hud.gd" id="11_7an1d"]
[ext_resource type="PackedScene" path="res://scenes/ui/help_panel.tscn" id="12_help"]
[ext_resource type="PackedScene" path="res://scenes/ui/recipe_book.tscn" id="13_recipe"]
[ext_resource type="Script" uid="uid://bclk3pc1m7h0g" path="res://scripts/managers/selection_manager.gd" id="14_selm"]
[ext_resource type="PackedScene" path="res://scenes/ui/merger_ui.tscn" id="15_merger"]

[sub_resource type="Environment" id="Environment_t5qdf"]
background_mode = 1
glow_enabled = true
glow_intensity = 1.61
glow_bloom = 0.64

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ibdhq"]
albedo_color = Color(0.0121183405, 0.0121183405, 0.0121183405, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_ypd6b"]
material = SubResource("StandardMaterial3D_ibdhq")
size = Vector2(200, 200)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ypd6b"]
render_priority = 0
shader = ExtResource("1_ibdhq")
shader_parameter/grid_color = Color(0, 0.16461393, 0.3610067, 1)
shader_parameter/grid_density = 1.0
shader_parameter/line_thickness = 0.045
shader_parameter/zoom_fade = 0.0
shader_parameter/line_softness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_macro"]
render_priority = 0
shader = ExtResource("1_ibdhq")
shader_parameter/grid_color = Color(0.92, 0.82, 0.45, 1)
shader_parameter/grid_density = 0.111111
shader_parameter/line_thickness = 0.04
shader_parameter/zoom_fade = 1.0
shader_parameter/line_softness = 0.82

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_recursos"]
content_margin_left = 16.0
content_margin_top = 12.0
content_margin_right = 16.0
content_margin_bottom = 12.0
bg_color = Color(0.06, 0.08, 0.12, 0.92)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.15, 0.3, 0.45, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hud"]
bg_color = Color(0.05, 0.05, 0.08, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.35, 0.5, 0.6)

[node name="MainGame3D" type="Node3D"]
script = ExtResource("1_bxm63")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_t5qdf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.49999997, 0.86602545, 0, -0.86602545, 0.49999997, 389.89294, -44.36802, 27.433317)

[node name="CameraPivot" type="Node3D" parent="."]
script = ExtResource("1_1dsme")

[node name="CameraElevation" type="Node3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.9999999, 0, 0, 0, 0.9999999, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot/CameraElevation"]
transform = Transform3D(1, 0, 0, 0, 1.0000002, 0, 0, 0, 1.0000002, 0, 8.408709, 2.2104428)
keep_aspect = 0
projection = 1
current = true
size = 20.861141
near = 0.015

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraPivot"]
mesh = SubResource("PlaneMesh_ypd6b")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_ypd6b")

[node name="GridMacro" type="MeshInstance3D" parent="CameraPivot"]
mesh = SubResource("PlaneMesh_ypd6b")
surface_material_override/0 = SubResource("ShaderMaterial_macro")

[node name="SelectionManager" type="Node" parent="."]
script = ExtResource("14_selm")

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh_library = ExtResource("4_ypd6b")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(65507, 65511, 1, 65508, 65511, 0, 65508, 65512, 1, 65510, 65514, 1, 65510, 65516, 0, 65511, 65506, 1, 65511, 65514, 1, 65512, 65506, 0, 65512, 65514, 0, 65514, 65504, 0, 65514, 65505, 0, 65519, 65504, 0, 65519, 65509, 1, 65519, 65510, 0, 65504, 65525, 0, 65506, 65524, 0, 65506, 65525, 0, 65507, 65528, 0, 65508, 65528, 0, 65508, 65529, 0, 65508, 65530, 2, 65509, 65529, 1, 65509, 65530, 2, 65513, 65525, 0, 65513, 65533, 0, 65514, 65533, 1, 65515, 65522, 1, 65515, 65523, 1, 65515, 65533, 1, 65518, 65526, 0, 65519, 65525, 0, 65519, 65526, 0, 65519, 65527, 0, 65519, 65528, 0, 65519, 65535, 1, 65505, 11, 0, 65505, 13, 0, 65506, 5, 1, 65506, 11, 0, 65506, 12, 0, 65507, 0, 0, 65507, 4, 0, 65507, 5, 1, 65507, 9, 0, 65507, 10, 0, 65507, 11, 0, 65508, 0, 1, 65508, 9, 0, 65512, 8, 1, 65512, 9, 1, 65514, 1, 2, 65515, 7, 1, 65516, 7, 0, 65504, 27, 1, 65506, 22, 0, 65506, 23, 1, 65508, 17, 1, 65509, 29, 1, 65509, 30, 1, 65510, 18, 2, 65511, 18, 2, 65512, 19, 1, 65512, 20, 0, 65512, 21, 1, 65512, 22, 1, 65513, 20, 2, 65518, 17, 0, 65513, 40, 0, 65519, 41, 0, 65519, 42, 0, 65520, 65509, 2, 65520, 65510, 2, 65521, 65512, 0, 65521, 65513, 0, 65526, 65512, 0, 65527, 65511, 0, 65527, 65512, 0, 65527, 65513, 0, 65528, 65516, 0, 65529, 65515, 0, 65534, 65518, 0, 65520, 65528, 0, 65520, 65529, 0, 65520, 65535, 0, 65522, 65521, 0, 65523, 65522, 0, 65524, 65534, 1, 65525, 65534, 0, 65533, 65520, 2, 65526, 8, 2, 65527, 8, 0, 65531, 13, 1, 65522, 24, 1, 65526, 17, 0, 65526, 18, 1, 65531, 18, 1, 65531, 19, 1, 65531, 24, 0, 65534, 23, 1, 65534, 24, 1, 65520, 42, 1, 65524, 35, 0, 65526, 36, 1, 65526, 44, 1, 65526, 45, 1, 65527, 36, 2, 65529, 33, 0, 65530, 38, 0, 65530, 39, 1, 65531, 39, 0, 65532, 47, 2, 65533, 37, 0, 65533, 38, 0, 65534, 36, 0, 65534, 37, 0, 65535, 36, 1, 65535, 37, 1, 1, 65518, 2, 1, 65519, 2, 2, 65509, 1, 2, 65517, 0, 2, 65518, 0, 3, 65508, 1, 3, 65518, 0, 4, 65507, 1, 7, 65512, 1, 8, 65512, 1, 10, 65514, 1, 11, 65514, 1, 11, 65515, 1, 12, 65514, 1, 13, 65504, 0, 14, 65504, 0, 14, 65505, 1, 14, 65506, 1, 14, 65510, 1, 15, 65504, 1, 15, 65505, 1, 15, 65509, 1, 15, 65510, 0, 3, 65520, 0, 3, 65523, 0, 9, 65522, 0, 12, 65526, 1, 13, 65520, 0, 13, 65534, 0, 14, 65520, 0, 14, 65521, 1, 14, 65534, 0, 14, 65535, 1, 15, 65520, 1, 2, 11, 1, 3, 11, 2, 8, 10, 1, 5, 16, 2, 5, 17, 1, 6, 30, 1, 6, 31, 0, 7, 24, 2, 7, 25, 2, 7, 30, 2, 7, 31, 1, 8, 25, 1, 9, 22, 1, 14, 27, 0, 14, 28, 0, 15, 28, 2, 15, 29, 1, 15, 31, 1, 0, 36, 2, 0, 37, 1, 0, 46, 2, 0, 47, 1, 1, 47, 1, 6, 32, 0, 6, 33, 0, 7, 46, 0, 7, 47, 0, 8, 46, 0, 10, 38, 1, 10, 39, 1, 11, 36, 2, 11, 37, 1, 11, 39, 1, 12, 39, 1, 12, 40, 1, 14, 39, 0, 14, 44, 1, 15, 32, 2, 19, 65516, 0, 20, 65515, 2, 20, 65516, 0, 21, 65508, 0, 22, 65508, 0, 24, 65510, 1, 24, 65511, 1, 25, 65511, 0, 26, 65510, 0, 26, 65511, 0, 27, 65510, 0, 28, 65514, 0, 28, 65515, 1, 16, 65524, 0, 20, 65530, 0, 20, 65531, 1, 21, 65524, 1, 21, 65525, 0, 21, 65530, 1, 22, 65525, 1, 23, 65523, 0, 24, 65533, 1, 27, 65527, 0, 28, 65525, 0, 28, 65526, 1, 28, 65527, 1, 29, 65526, 1, 31, 65533, 1, 19, 1, 0, 20, 7, 1, 21, 7, 0, 28, 9, 0, 28, 12, 1, 29, 2, 2, 29, 3, 1, 29, 9, 1, 31, 4, 1, 31, 10, 2, 16, 29, 0, 16, 30, 1, 16, 31, 1, 17, 30, 0, 18, 18, 1, 20, 16, 0, 20, 17, 0, 21, 18, 0, 23, 25, 0, 28, 30, 0, 29, 30, 0, 30, 31, 0, 31, 30, 0, 16, 32, 2, 16, 33, 2, 22, 46, 0, 22, 47, 1, 23, 35, 2, 23, 45, 1, 23, 46, 1, 23, 47, 1, 24, 37, 0, 30, 33, 1, 30, 39, 0, 32, 65507, 0, 33, 65506, 1, 33, 65507, 1, 33, 65518, 0, 33, 65519, 0, 34, 65504, 0, 34, 65505, 1, 34, 65517, 1, 34, 65518, 1, 34, 65519, 1, 38, 65510, 0, 38, 65511, 1, 39, 65511, 1, 41, 65518, 1, 41, 65519, 1, 42, 65507, 2, 42, 65517, 0, 42, 65518, 0, 43, 65507, 2, 44, 65509, 1, 45, 65508, 1, 45, 65509, 1, 46, 65508, 1, 46, 65515, 1, 47, 65507, 1, 47, 65508, 1, 32, 65533, 1, 32, 65534, 1, 32, 65535, 1, 33, 65535, 1, 34, 65530, 2, 35, 65530, 1, 36, 65529, 0, 39, 65535, 0, 43, 65521, 0, 32, 10, 0, 32, 11, 0, 33, 10, 0, 35, 6, 1, 35, 7, 0, 35, 14, 1, 36, 7, 0, 36, 14, 1, 36, 15, 1, 37, 15, 0, 39, 0, 1, 40, 0, 0, 40, 1, 1, 41, 1, 0, 44, 7, 1, 45, 7, 1, 45, 8, 1, 46, 8, 2, 46, 10, 0, 35, 26, 2, 35, 27, 2, 37, 16, 0, 42, 18, 1, 42, 31, 0, 43, 20, 0, 44, 16, 0, 44, 21, 0, 35, 37, 1, 36, 38, 0, 41, 32, 0, 46, 43, 0, 46, 44, 0)
}

[node name="WorldGenerator" type="Node" parent="."]
script = ExtResource("5_t1nic")
radio_vision = 16
espacio_inicial = 10.65
frecuencia_islas = 0.2
frecuencia_recursos = 0.017
rareza_roja = 0.673

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_dmcra")

[node name="PanelRecursos" type="PanelContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_right = 340.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_recursos")

[node name="MarginContainer" type="MarginContainer" parent="HUD/PanelRecursos"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 14

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/PanelRecursos/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="InventoryHUD" parent="HUD" instance=ExtResource("9_g1lpv")]

[node name="GodSiphonUI" parent="HUD" instance=ExtResource("8_g1lpv")]
layout_mode = 1

[node name="ConstructionManager" type="Node" parent="." groups=["ConstructionManager"]]
script = ExtResource("7_5bore")

[node name="ConstructorUI" parent="." instance=ExtResource("10_3vmts")]

[node name="MergerUI" parent="." instance=ExtResource("15_merger")]

[node name="HelpPanel" parent="." instance=ExtResource("12_help")]

[node name="RecipeBook" parent="." instance=ExtResource("13_recipe")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("11_7an1d")

[node name="PanelSistema" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = -20.0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hud")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelSistema"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnMenu" type="Button" parent="CanvasLayer/PanelSistema/HBoxContainer"]
layout_mode = 2
text = "MENU"

[node name="MenuDropdownPanel" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_left = 20.0
offset_right = 180.0
offset_bottom = 380.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hud")

[node name="MenuDropdown" type="VBoxContainer" parent="CanvasLayer/MenuDropdownPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="BtnSalir" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
text = "SALIR"

[node name="BtnCargar" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
text = "CARGAR"

[node name="BtnModoSeleccion" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
toggle_mode = true
text = "SELECCIÓN"

[node name="BtnDebug" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
text = "DEBUG OFF"

[node name="BtnRecetas" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
text = "RECETAS"

[node name="BtnActualizarVisual" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
tooltip_text = "Recarga el material de las bolas de energía (pulse_visual_material.tres) sin reiniciar"
text = "ACTUALIZAR VISUAL"

[node name="BtnMúsica" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
text = "MÚSICA"

[node name="BtnOpciones" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
text = "OPCIONES"

[node name="BtnPausa" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
text = "PAUSA"

[node name="BtnGuardar" type="Button" parent="CanvasLayer/MenuDropdownPanel/MenuDropdown"]
layout_mode = 2
text = "GUARDAR"

[node name="PanelMusica" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hud")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelMusica"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BtnRecursos" type="Button" parent="CanvasLayer/PanelMusica/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "INFRAESTRUCTURA"

[node name="RecursosDropdownPanel" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_right = 200.0
offset_bottom = 260.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hud")

[node name="RecursosDropdown" type="VBoxContainer" parent="CanvasLayer/RecursosDropdownPanel"]
layout_mode = 2
theme_override_constants/separation = 2
